--- a/Project/bin/Project.dll.config
+++ b/Project/bin/Project.dll.config
@@ -17,6 +17,15 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+  <roleManager cacheRolesInCookie="true" enabled="true" defaultProvider="CustomRoleProvider">
+		  <providers>
+			  <clear/>
+			  <add name="CustomRoleProvider" type="Project.Security.CustomRoleProvider" connectionStringName="SugasContext" />
+		  </providers>
+	  </roleManager>
+	  <authentication mode="Forms">
+		  <forms loginUrl="Error/Index" timeout="2880"></forms>
+	  </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
