upload img and search

--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -336,22 +336,23 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="ProductImage\Adidas\AdidasSandal1.jpg" />
-    <Content Include="ProductImage\Adidas\AdidasSandal2.jpg" />
-    <Content Include="ProductImage\Adidas\AdidasSandal3.jpg" />
-    <Content Include="ProductImage\Adidas\AdidasSandal4.jpg" />
-    <Content Include="ProductImage\Adidas\AdidasSandal5.jpg" />
-    <Content Include="ProductImage\Adidas\Adidasshoes1.jpg" />
-    <Content Include="ProductImage\Kenzo\PansKenzo1.jpg" />
-    <Content Include="ProductImage\Kenzo\PansKenzo2.jpg" />
-    <Content Include="ProductImage\Kenzo\PansKenzo3.jpg" />
-    <Content Include="ProductImage\Lacoste\Lacoste1.jpg" />
-    <Content Include="ProductImage\MLB\MLBShirt1.jpg" />
-    <Content Include="ProductImage\MLB\MLBShirt2.jpg" />
-    <Content Include="ProductImage\MLB\MLBShirt3.jpg" />
-    <Content Include="ProductImage\MLB\MLBShirt4.jpg" />
-    <Content Include="ProductImage\Nike\Nikeshoe1.jpg" />
-    <Content Include="ProductImage\Nike\Nikeshoe2.jpg" />
+    <Content Include="ProductImage\Add.png" />
+    <Content Include="ProductImage\AdidasSandal1.jpg" />
+    <Content Include="ProductImage\AdidasSandal2.jpg" />
+    <Content Include="ProductImage\AdidasSandal3.jpg" />
+    <Content Include="ProductImage\AdidasSandal4.jpg" />
+    <Content Include="ProductImage\AdidasSandal5.jpg" />
+    <Content Include="ProductImage\Adidasshoes1.jpg" />
+    <Content Include="ProductImage\Lacoste1.jpg" />
+    <Content Include="ProductImage\MLBShirt1.jpg" />
+    <Content Include="ProductImage\MLBShirt2.jpg" />
+    <Content Include="ProductImage\MLBShirt3.jpg" />
+    <Content Include="ProductImage\MLBShirt4.jpg" />
+    <Content Include="ProductImage\Nikeshoe1.jpg" />
+    <Content Include="ProductImage\Nikeshoe2.jpg" />
+    <Content Include="ProductImage\PansKenzo1.jpg" />
+    <Content Include="ProductImage\PansKenzo2.jpg" />
+    <Content Include="ProductImage\PansKenzo3.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\fonts\fontawesome-webfont.eot" />
@@ -424,9 +425,6 @@
     <Content Include="Areas\Admin\Views\Categories\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Categories\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\Categories\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\Product\Details.cshtml" />
-    <Content Include="Areas\Admin\Views\Product\Create.cshtml" />
-    <Content Include="Areas\Admin\Views\Product\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Product\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\Tags\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Tags\Create.cshtml" />
@@ -436,7 +434,6 @@
     <Content Include="Areas\Admin\Views\Users\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Edit.cshtml" />
-    <Content Include="Areas\Admin\Views\Users\Delete.cshtml" />
     <Content Include="Areas\Admin\Views\Roles\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Roles\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Roles\Create.cshtml" />
@@ -515,6 +512,10 @@
     <Content Include="Content\Login\vendor\bootstrap\css\bootstrap-reboot.min.css.map" />
     <Content Include="Content\Login\vendor\bootstrap\css\bootstrap.css.map" />
     <Content Include="Content\Login\vendor\bootstrap\css\bootstrap.min.css.map" />
+    <Content Include="Areas\Admin\Views\Users\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Product\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Product\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Product\Edit.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
