--- a/Project/Web.config
+++ b/Project/Web.config
@@ -14,6 +14,17 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+	<system.net>
+		<mailSettings>
+			<smtp>
+				<network host="smtp.gmail.com" port ="587"
+						 userName ="datnqhe130421@fpt.edu.vn"
+						 password ="123456qwertT"
+						 enableSsl="true"					
+		            />
+			</smtp>
+		</mailSettings>
+	</system.net>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
