--- a/Project/Web.config
+++ b/Project/Web.config
@@ -17,11 +17,7 @@
 	<system.net>
 		<mailSettings>
 			<smtp>
-				<network host="smtp.gmail.com" port ="587"
-						 userName ="datnqhe130421@fpt.edu.vn"
-						 password ="123456qwertT"
-						 enableSsl="true"					
-		            />
+				<network host="smtp.gmail.com" port="587" userName="datnqhe130421@fpt.edu.vn" password="123456qwertT" enableSsl="true" />
 			</smtp>
 		</mailSettings>
 	</system.net>
@@ -30,7 +26,7 @@
     <httpRuntime targetFramework="4.7.2" />
   <roleManager cacheRolesInCookie="true" enabled="true" defaultProvider="CustomRoleProvider">
 		  <providers>
-			  <clear/>
+			  <clear />
 			  <add name="CustomRoleProvider" type="Project.Security.CustomRoleProvider" connectionStringName="SugasContext" />
 		  </providers>
 	  </roleManager>
