--- a/Project/packages.config
+++ b/Project/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
+  <package id="BCrypt" version="1.0.0.0" targetFramework="net472" />
+  <package id="BCrypt.Net" version="0.1.0" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="EPPlus" version="5.8.2" targetFramework="net472" />
