--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -271,6 +271,7 @@
     <Content Include="Content\img\products\img-8.jpg" />
     <Content Include="Content\img\products\img-9.jpg" />
     <Content Include="Content\img\product\product-1.jpg" />
+    <Content Include="Content\img\Screenshot_1.png" />
     <Content Include="Content\img\slider-1.jpg" />
     <Content Include="Content\img\slider-2.jpg" />
     <Content Include="Content\img\slider-3.jpg" />
