--- a/Project/bin/Project.dll.config
+++ b/Project/bin/Project.dll.config
@@ -17,15 +17,6 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-  <roleManager cacheRolesInCookie="true" enabled="true" defaultProvider="CustomRoleProvider">
-		  <providers>
-			  <clear/>
-			  <add name="CustomRoleProvider" type="Project.Security.CustomRoleProvider" connectionStringName="SugasContext" />
-		  </providers>
-	  </roleManager>
-	  <authentication mode="Forms">
-		  <forms loginUrl="Error/Index" timeout="2880"></forms>
-	  </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -72,6 +63,6 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <connectionStrings>
-    <add name="SugasContext" connectionString="data source=MCCOMPUTER\MY_INSTANCE;initial catalog=SugasContext;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="SugasContext" connectionString="data source=TRUNGHUY\SQLEXPRESS;initial catalog=SugasContext;persist security info=True;user id=sa;password=1234567;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
